Modified index and added images

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Your Title Here</title>
+	<title>Hello World</title>
 </head>
 <body>
 <h1> Hello World! </h1>
-Your Content Here
+<i>Nicki Minaj loves coding and is cheering our cohort JackRabbits 2017!</i>
+<img src="nicki.png" alt="Nicki Minaj" style="width:400px;height:471px;" align="left">
+<p>
+<em>Onika Tanya Maraj </em> (born December 8, 1982), known professionally as <strong> Nicki Minaj</strong>, is a Trinidadian-born American rapper, singer and songwriter.</p>
+
+<b>Nicki Minaj Discography</b>
+<ul> 
+<li> Pink Friday (2010)</li>
+<li> Pink Friday: Roman Reloaded (2012)</li>
+<li> The Pinkprint (2014)</li>
+</ul>
+
+<b>My Favorite Nicki Minaj Songs</b>
+<ol> 
+<li> Monster </li>
+<li> Roman's Revenge </li>
+<li> Trini Dem Girls </li>
+</ol>
 </body>
 </html>
