Added second table

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -26,5 +26,43 @@
     <td>Crookshanks</td>
   </tr>
 </table>
+
+<br>
+
+
+<table border=1>
+  <tr>
+    <th>Pets</th>
+    <th>Original Price</th>
+    <th>Sale Price</th>
+    <th>Total Checkout Price</th>
+  </tr>
+  <tr>
+    <td>Black Cat</td>
+    <td>100 galleons</td>
+    <td>80 galleons</td>
+    <td rowspan="2">180 Galleons</td>
+  </tr>
+  <tr>
+    <td>Snowy Owl</td>
+    <td>120 galleons</td>
+    <td>100 galleons</td>
+  </tr>
+
+  <tr>
+    <td>Brown Toad</td>
+    <td>70 galleons</td>
+    <td>50 galleons</td>
+    <td>&nbsp;</td>
+  </tr>
+
+  <tr>
+    <td colspan="2">Pygmy Puff (Sold Out)</td>
+    <td><s>5 galleons</s></td>
+    <td>&nbsp;</td>
+  </tr>
+
+</table>
+
 </body>
 </html>
